fix: better spacing for main svg icon

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -11,7 +11,7 @@
 }
 
 .leftCol {
-	@apply basis-1/3 flex justify-center;
+	@apply basis-1/3 flex justify-center lg:mb-6;
 }
 
 .title {
